# agentic-rollout-library

./: .env.example  .gitignore  CLAUDE.md  README.md  README_EN.md  kodo_readme.md  pyproject.toml  r2e_configs.py  r2e_k8s_example.py  requirements.txt  result.txt  test_llm_concurrent.py
datasets/: subset0.json
docs/: FACTORY_PATTERN_README.md  GENERAL_AGENT_README.md  README.md
examples/: README.md  README_CN.md  advanced_integration.py  basic_usage.py  core_tools_demo.py  profiler_example.py  test_agentic_rollout.py  test_coding_agent.py  tool_integration_demo.py  validation_tests.py
swe-bench-verified-workspace/: check_all_python_versions.py  cleanup_pods.sh  cpu_config2  example_context_length_check.py  generate_swe_verified.py  problematic_samples.txt  python_version_in_image.jsonl  rollout_and_submit.sh  single_test.jsonl  small.jsonl  test-swe-bench-verified-50.jsonl
tests/: README.md  __init__.py  debug_mode_example.py  enhanced_debug_example.py  factory_usage_example.py  r2e_final_demo.py  r2e_k8s_agent_example.py  r2e_k8s_simple.py  real_llm_example.py  system_prompt_demo.py  test_advanced_prompt_generation.py  test_collect_trajectory.py  test_custom_tool_desc.py  test_debug_mode.py  test_factory_pattern.py  test_general_agent.py  test_general_agent_rollout.py  test_improved_system_prompt.py  test_json_action_format.py  test_llm_client.py  test_llm_retry_mechanism.py  test_prompt_builder_example.py  test_r2e_agent_simple.py  test_r2e_debug.py  test_r2e_debug_simple.py  test_r2e_file_debug.py  test_r2e_file_ops.py  test_r2e_general_agent.py  test_r2e_general_agent_on_swe.py  test_r2e_general_agent_on_swe_backup.py  test_r2e_general_agent_on_swe_sharded.py  test_r2e_general_agent_on_swe_subprocess.py  (+17 more)
(+4284 files in other folders)
